--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -2,7 +2,7 @@
     background-color: gray;
     color: white;
     padding: 10x;
-    font-size: 10px;
+    font-size: 24px;
     border: none;
 }
     
@@ -14,11 +14,11 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: gray;
     min-width: 100px;
-    box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 2px 2px 0px rgba(136, 40, 40, 0.2);
     z-index: 1;
-    font-size: 12pt
+    font-size: 18pt
 }
     
 .dropdown-content a {
@@ -29,7 +29,7 @@
 }
     
 .dropdown-content a:hover {
-    background-color: #ddd;
+    background-color: gray;
 }
     
 .dropdown:hover .dropdown-content {
@@ -38,4 +38,13 @@
     
 .dropdown:hover .dropbtn {
     background-color: gainsboro;
+}
+
+a:link {
+    text-decoration: none;
+    color: white;
+}
+
+a:visited {
+    color: white;
 }
