--- a/CSS/homepage.css
+++ b/CSS/homepage.css
@@ -1,5 +1,5 @@
 body {
-    background-color: white;
+    background-color: beige;
     font-family: Georgia, 'Times New Roman', Times;
     font-size: 12pt;
 }
